TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> LstPrograms
Rule 1     LstPrograms -> Program
Rule 2     LstPrograms -> LstPrograms Program
Rule 3     Program -> DECLARATIONS LCURLY LstDecl RCURLY Fs BEGIN LstInst END
Rule 4     LstDecl -> Decl
Rule 5     LstDecl -> Decl LstDecl
Rule 6     Decl -> IntWord Variables PONTeVIR
Rule 7     Decl -> ArrayInt Variables PONTeVIR
Rule 8     Variables -> Var VIR Variables
Rule 9     Variables -> Var
Rule 10    Var -> ID
Rule 11    Var -> ID LSQUARE NINT RSQUARE
Rule 12    Fs -> <empty>
Rule 13    Fs -> FUNCTIONS DOLLAR LstFunct DOLLAR
Rule 14    LstFunct -> Func
Rule 15    LstFunct -> LstFunct Func
Rule 16    Func -> DEF FUNC_NAME LCURLY LstInst RETURN ID PONTeVIR RCURLY
Rule 17    LstInst -> Instruction
Rule 18    LstInst -> LstInst Instruction
Rule 19    Instruction -> Atrib
Rule 20    Instruction -> Function
Rule 21    Instruction -> ifStatement
Rule 22    Instruction -> Loop
Rule 23    Loop -> WHILE LROUND Condition RROUND LCURLY LstInst RCURLY
Rule 24    Loop -> FOR LROUND Atrib Atrib Condition RROUND LCURLY LstInst RCURLY
Rule 25    ifStatement -> IF LROUND Condition RROUND THEN LCURLY LstInst RCURLY
Rule 26    ifStatement -> IF LROUND Condition RROUND THEN LCURLY LstInst RCURLY ELSE LCURLY LstInst RCURLY
Rule 27    Atrib -> ID ASSIGN Expr PONTeVIR
Rule 28    Atrib -> ID PLUSEQ Expr PONTeVIR
Rule 29    Atrib -> ID MINUSEQ Expr PONTeVIR
Rule 30    Atrib -> ID MULTEQ Expr PONTeVIR
Rule 31    Atrib -> ID DIVEQ Expr PONTeVIR
Rule 32    Atrib -> ID MODEQ Expr PONTeVIR
Rule 33    Atrib -> ID PLUSPLUS PONTeVIR
Rule 34    Atrib -> ID MINUSMINUS PONTeVIR
Rule 35    Atrib -> ID LSQUARE Expr RSQUARE ASSIGN ExprR PONTeVIR
Rule 36    Function -> WRITE LROUND PHRASE RROUND PONTeVIR
Rule 37    Function -> WRITE LROUND ExprR RROUND PONTeVIR
Rule 38    Condition -> ExprR
Rule 39    Condition -> ExprR AND Condition
Rule 40    Condition -> ExprR OR Condition
Rule 41    ExprR -> Expr
Rule 42    ExprR -> Expr EQEQ Expr
Rule 43    ExprR -> Expr NEQ Expr
Rule 44    ExprR -> Expr LT Expr
Rule 45    ExprR -> Expr LE Expr
Rule 46    ExprR -> Expr GT Expr
Rule 47    ExprR -> Expr GE Expr
Rule 48    Expr -> Term
Rule 49    Expr -> Expr PLUS Term
Rule 50    Expr -> Expr MINUS Term
Rule 51    Term -> Factor
Rule 52    Term -> Term MULT Factor
Rule 53    Term -> Term DIV Factor
Rule 54    Term -> Term MOD Factor
Rule 55    Factor -> ID
Rule 56    Factor -> NINT
Rule 57    Factor -> LROUND MINUS NINT RROUND
Rule 58    Factor -> READ LROUND RROUND
Rule 59    Factor -> FUNC_NAME
Rule 60    Factor -> ID LSQUARE NINT RSQUARE
Rule 61    Factor -> ID LSQUARE ID RSQUARE

Terminals, with rules where they appear

AND                  : 39
ASSIGN               : 27 35
ArrayInt             : 7
BEGIN                : 3
DECLARATIONS         : 3
DEF                  : 16
DIV                  : 53
DIVEQ                : 31
DOLLAR               : 13 13
ELSE                 : 26
END                  : 3
EQEQ                 : 42
FOR                  : 24
FUNCTIONS            : 13
FUNC_NAME            : 16 59
GE                   : 47
GT                   : 46
ID                   : 10 11 16 27 28 29 30 31 32 33 34 35 55 60 61 61
IF                   : 25 26
IntWord              : 6
LCURLY               : 3 16 23 24 25 26 26
LE                   : 45
LROUND               : 23 24 25 26 36 37 57 58
LSQUARE              : 11 35 60 61
LT                   : 44
MINUS                : 50 57
MINUSEQ              : 29
MINUSMINUS           : 34
MOD                  : 54
MODEQ                : 32
MULT                 : 52
MULTEQ               : 30
NEQ                  : 43
NINT                 : 11 56 57 60
OR                   : 40
PHRASE               : 36
PLUS                 : 49
PLUSEQ               : 28
PLUSPLUS             : 33
PONTeVIR             : 6 7 16 27 28 29 30 31 32 33 34 35 36 37
RCURLY               : 3 16 23 24 25 26 26
READ                 : 58
RETURN               : 16
RROUND               : 23 24 25 26 36 37 57 58
RSQUARE              : 11 35 60 61
THEN                 : 25 26
VIR                  : 8
WHILE                : 23
WRITE                : 36 37
error                : 

Nonterminals, with rules where they appear

Atrib                : 19 24 24
Condition            : 23 24 25 26 39 40
Decl                 : 4 5
Expr                 : 27 28 29 30 31 32 35 41 42 42 43 43 44 44 45 45 46 46 47 47 49 50
ExprR                : 35 37 38 39 40
Factor               : 51 52 53 54
Fs                   : 3
Func                 : 14 15
Function             : 20
Instruction          : 17 18
Loop                 : 22
LstDecl              : 3 5
LstFunct             : 13 15
LstInst              : 3 16 18 23 24 25 26 26
LstPrograms          : 2 0
Program              : 1 2
Term                 : 48 49 50 52 53 54
Var                  : 8 9
Variables            : 6 7 8
ifStatement          : 21

Parsing method: LALR

state 0

    (0) S' -> . LstPrograms
    (1) LstPrograms -> . Program
    (2) LstPrograms -> . LstPrograms Program
    (3) Program -> . DECLARATIONS LCURLY LstDecl RCURLY Fs BEGIN LstInst END

    DECLARATIONS    shift and go to state 3

    LstPrograms                    shift and go to state 1
    Program                        shift and go to state 2

state 1

    (0) S' -> LstPrograms .
    (2) LstPrograms -> LstPrograms . Program
    (3) Program -> . DECLARATIONS LCURLY LstDecl RCURLY Fs BEGIN LstInst END

    DECLARATIONS    shift and go to state 3

    Program                        shift and go to state 4

state 2

    (1) LstPrograms -> Program .

    DECLARATIONS    reduce using rule 1 (LstPrograms -> Program .)
    $end            reduce using rule 1 (LstPrograms -> Program .)


state 3

    (3) Program -> DECLARATIONS . LCURLY LstDecl RCURLY Fs BEGIN LstInst END

    LCURLY          shift and go to state 5


state 4

    (2) LstPrograms -> LstPrograms Program .

    DECLARATIONS    reduce using rule 2 (LstPrograms -> LstPrograms Program .)
    $end            reduce using rule 2 (LstPrograms -> LstPrograms Program .)


state 5

    (3) Program -> DECLARATIONS LCURLY . LstDecl RCURLY Fs BEGIN LstInst END
    (4) LstDecl -> . Decl
    (5) LstDecl -> . Decl LstDecl
    (6) Decl -> . IntWord Variables PONTeVIR
    (7) Decl -> . ArrayInt Variables PONTeVIR

    IntWord         shift and go to state 8
    ArrayInt        shift and go to state 9

    LstDecl                        shift and go to state 6
    Decl                           shift and go to state 7

state 6

    (3) Program -> DECLARATIONS LCURLY LstDecl . RCURLY Fs BEGIN LstInst END

    RCURLY          shift and go to state 10


state 7

    (4) LstDecl -> Decl .
    (5) LstDecl -> Decl . LstDecl
    (4) LstDecl -> . Decl
    (5) LstDecl -> . Decl LstDecl
    (6) Decl -> . IntWord Variables PONTeVIR
    (7) Decl -> . ArrayInt Variables PONTeVIR

    RCURLY          reduce using rule 4 (LstDecl -> Decl .)
    IntWord         shift and go to state 8
    ArrayInt        shift and go to state 9

    Decl                           shift and go to state 7
    LstDecl                        shift and go to state 11

state 8

    (6) Decl -> IntWord . Variables PONTeVIR
    (8) Variables -> . Var VIR Variables
    (9) Variables -> . Var
    (10) Var -> . ID
    (11) Var -> . ID LSQUARE NINT RSQUARE

    ID              shift and go to state 14

    Variables                      shift and go to state 12
    Var                            shift and go to state 13

state 9

    (7) Decl -> ArrayInt . Variables PONTeVIR
    (8) Variables -> . Var VIR Variables
    (9) Variables -> . Var
    (10) Var -> . ID
    (11) Var -> . ID LSQUARE NINT RSQUARE

    ID              shift and go to state 14

    Variables                      shift and go to state 15
    Var                            shift and go to state 13

state 10

    (3) Program -> DECLARATIONS LCURLY LstDecl RCURLY . Fs BEGIN LstInst END
    (12) Fs -> .
    (13) Fs -> . FUNCTIONS DOLLAR LstFunct DOLLAR

    BEGIN           reduce using rule 12 (Fs -> .)
    FUNCTIONS       shift and go to state 17

    Fs                             shift and go to state 16

state 11

    (5) LstDecl -> Decl LstDecl .

    RCURLY          reduce using rule 5 (LstDecl -> Decl LstDecl .)


state 12

    (6) Decl -> IntWord Variables . PONTeVIR

    PONTeVIR        shift and go to state 18


state 13

    (8) Variables -> Var . VIR Variables
    (9) Variables -> Var .

    VIR             shift and go to state 19
    PONTeVIR        reduce using rule 9 (Variables -> Var .)


state 14

    (10) Var -> ID .
    (11) Var -> ID . LSQUARE NINT RSQUARE

    VIR             reduce using rule 10 (Var -> ID .)
    PONTeVIR        reduce using rule 10 (Var -> ID .)
    LSQUARE         shift and go to state 20


state 15

    (7) Decl -> ArrayInt Variables . PONTeVIR

    PONTeVIR        shift and go to state 21


state 16

    (3) Program -> DECLARATIONS LCURLY LstDecl RCURLY Fs . BEGIN LstInst END

    BEGIN           shift and go to state 22


state 17

    (13) Fs -> FUNCTIONS . DOLLAR LstFunct DOLLAR

    DOLLAR          shift and go to state 23


state 18

    (6) Decl -> IntWord Variables PONTeVIR .

    IntWord         reduce using rule 6 (Decl -> IntWord Variables PONTeVIR .)
    ArrayInt        reduce using rule 6 (Decl -> IntWord Variables PONTeVIR .)
    RCURLY          reduce using rule 6 (Decl -> IntWord Variables PONTeVIR .)


state 19

    (8) Variables -> Var VIR . Variables
    (8) Variables -> . Var VIR Variables
    (9) Variables -> . Var
    (10) Var -> . ID
    (11) Var -> . ID LSQUARE NINT RSQUARE

    ID              shift and go to state 14

    Var                            shift and go to state 13
    Variables                      shift and go to state 24

state 20

    (11) Var -> ID LSQUARE . NINT RSQUARE

    NINT            shift and go to state 25


state 21

    (7) Decl -> ArrayInt Variables PONTeVIR .

    IntWord         reduce using rule 7 (Decl -> ArrayInt Variables PONTeVIR .)
    ArrayInt        reduce using rule 7 (Decl -> ArrayInt Variables PONTeVIR .)
    RCURLY          reduce using rule 7 (Decl -> ArrayInt Variables PONTeVIR .)


state 22

    (3) Program -> DECLARATIONS LCURLY LstDecl RCURLY Fs BEGIN . LstInst END
    (17) LstInst -> . Instruction
    (18) LstInst -> . LstInst Instruction
    (19) Instruction -> . Atrib
    (20) Instruction -> . Function
    (21) Instruction -> . ifStatement
    (22) Instruction -> . Loop
    (27) Atrib -> . ID ASSIGN Expr PONTeVIR
    (28) Atrib -> . ID PLUSEQ Expr PONTeVIR
    (29) Atrib -> . ID MINUSEQ Expr PONTeVIR
    (30) Atrib -> . ID MULTEQ Expr PONTeVIR
    (31) Atrib -> . ID DIVEQ Expr PONTeVIR
    (32) Atrib -> . ID MODEQ Expr PONTeVIR
    (33) Atrib -> . ID PLUSPLUS PONTeVIR
    (34) Atrib -> . ID MINUSMINUS PONTeVIR
    (35) Atrib -> . ID LSQUARE Expr RSQUARE ASSIGN ExprR PONTeVIR
    (36) Function -> . WRITE LROUND PHRASE RROUND PONTeVIR
    (37) Function -> . WRITE LROUND ExprR RROUND PONTeVIR
    (25) ifStatement -> . IF LROUND Condition RROUND THEN LCURLY LstInst RCURLY
    (26) ifStatement -> . IF LROUND Condition RROUND THEN LCURLY LstInst RCURLY ELSE LCURLY LstInst RCURLY
    (23) Loop -> . WHILE LROUND Condition RROUND LCURLY LstInst RCURLY
    (24) Loop -> . FOR LROUND Atrib Atrib Condition RROUND LCURLY LstInst RCURLY

    ID              shift and go to state 32
    WRITE           shift and go to state 33
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36

    LstInst                        shift and go to state 26
    Instruction                    shift and go to state 27
    Atrib                          shift and go to state 28
    Function                       shift and go to state 29
    ifStatement                    shift and go to state 30
    Loop                           shift and go to state 31

state 23

    (13) Fs -> FUNCTIONS DOLLAR . LstFunct DOLLAR
    (14) LstFunct -> . Func
    (15) LstFunct -> . LstFunct Func
    (16) Func -> . DEF FUNC_NAME LCURLY LstInst RETURN ID PONTeVIR RCURLY

    DEF             shift and go to state 39

    LstFunct                       shift and go to state 37
    Func                           shift and go to state 38

state 24

    (8) Variables -> Var VIR Variables .

    PONTeVIR        reduce using rule 8 (Variables -> Var VIR Variables .)


state 25

    (11) Var -> ID LSQUARE NINT . RSQUARE

    RSQUARE         shift and go to state 40


state 26

    (3) Program -> DECLARATIONS LCURLY LstDecl RCURLY Fs BEGIN LstInst . END
    (18) LstInst -> LstInst . Instruction
    (19) Instruction -> . Atrib
    (20) Instruction -> . Function
    (21) Instruction -> . ifStatement
    (22) Instruction -> . Loop
    (27) Atrib -> . ID ASSIGN Expr PONTeVIR
    (28) Atrib -> . ID PLUSEQ Expr PONTeVIR
    (29) Atrib -> . ID MINUSEQ Expr PONTeVIR
    (30) Atrib -> . ID MULTEQ Expr PONTeVIR
    (31) Atrib -> . ID DIVEQ Expr PONTeVIR
    (32) Atrib -> . ID MODEQ Expr PONTeVIR
    (33) Atrib -> . ID PLUSPLUS PONTeVIR
    (34) Atrib -> . ID MINUSMINUS PONTeVIR
    (35) Atrib -> . ID LSQUARE Expr RSQUARE ASSIGN ExprR PONTeVIR
    (36) Function -> . WRITE LROUND PHRASE RROUND PONTeVIR
    (37) Function -> . WRITE LROUND ExprR RROUND PONTeVIR
    (25) ifStatement -> . IF LROUND Condition RROUND THEN LCURLY LstInst RCURLY
    (26) ifStatement -> . IF LROUND Condition RROUND THEN LCURLY LstInst RCURLY ELSE LCURLY LstInst RCURLY
    (23) Loop -> . WHILE LROUND Condition RROUND LCURLY LstInst RCURLY
    (24) Loop -> . FOR LROUND Atrib Atrib Condition RROUND LCURLY LstInst RCURLY

    END             shift and go to state 41
    ID              shift and go to state 32
    WRITE           shift and go to state 33
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36

    Instruction                    shift and go to state 42
    Atrib                          shift and go to state 28
    Function                       shift and go to state 29
    ifStatement                    shift and go to state 30
    Loop                           shift and go to state 31

state 27

    (17) LstInst -> Instruction .

    END             reduce using rule 17 (LstInst -> Instruction .)
    ID              reduce using rule 17 (LstInst -> Instruction .)
    WRITE           reduce using rule 17 (LstInst -> Instruction .)
    IF              reduce using rule 17 (LstInst -> Instruction .)
    WHILE           reduce using rule 17 (LstInst -> Instruction .)
    FOR             reduce using rule 17 (LstInst -> Instruction .)
    RETURN          reduce using rule 17 (LstInst -> Instruction .)
    RCURLY          reduce using rule 17 (LstInst -> Instruction .)


state 28

    (19) Instruction -> Atrib .

    END             reduce using rule 19 (Instruction -> Atrib .)
    ID              reduce using rule 19 (Instruction -> Atrib .)
    WRITE           reduce using rule 19 (Instruction -> Atrib .)
    IF              reduce using rule 19 (Instruction -> Atrib .)
    WHILE           reduce using rule 19 (Instruction -> Atrib .)
    FOR             reduce using rule 19 (Instruction -> Atrib .)
    RETURN          reduce using rule 19 (Instruction -> Atrib .)
    RCURLY          reduce using rule 19 (Instruction -> Atrib .)


state 29

    (20) Instruction -> Function .

    END             reduce using rule 20 (Instruction -> Function .)
    ID              reduce using rule 20 (Instruction -> Function .)
    WRITE           reduce using rule 20 (Instruction -> Function .)
    IF              reduce using rule 20 (Instruction -> Function .)
    WHILE           reduce using rule 20 (Instruction -> Function .)
    FOR             reduce using rule 20 (Instruction -> Function .)
    RETURN          reduce using rule 20 (Instruction -> Function .)
    RCURLY          reduce using rule 20 (Instruction -> Function .)


state 30

    (21) Instruction -> ifStatement .

    END             reduce using rule 21 (Instruction -> ifStatement .)
    ID              reduce using rule 21 (Instruction -> ifStatement .)
    WRITE           reduce using rule 21 (Instruction -> ifStatement .)
    IF              reduce using rule 21 (Instruction -> ifStatement .)
    WHILE           reduce using rule 21 (Instruction -> ifStatement .)
    FOR             reduce using rule 21 (Instruction -> ifStatement .)
    RETURN          reduce using rule 21 (Instruction -> ifStatement .)
    RCURLY          reduce using rule 21 (Instruction -> ifStatement .)


state 31

    (22) Instruction -> Loop .

    END             reduce using rule 22 (Instruction -> Loop .)
    ID              reduce using rule 22 (Instruction -> Loop .)
    WRITE           reduce using rule 22 (Instruction -> Loop .)
    IF              reduce using rule 22 (Instruction -> Loop .)
    WHILE           reduce using rule 22 (Instruction -> Loop .)
    FOR             reduce using rule 22 (Instruction -> Loop .)
    RETURN          reduce using rule 22 (Instruction -> Loop .)
    RCURLY          reduce using rule 22 (Instruction -> Loop .)


state 32

    (27) Atrib -> ID . ASSIGN Expr PONTeVIR
    (28) Atrib -> ID . PLUSEQ Expr PONTeVIR
    (29) Atrib -> ID . MINUSEQ Expr PONTeVIR
    (30) Atrib -> ID . MULTEQ Expr PONTeVIR
    (31) Atrib -> ID . DIVEQ Expr PONTeVIR
    (32) Atrib -> ID . MODEQ Expr PONTeVIR
    (33) Atrib -> ID . PLUSPLUS PONTeVIR
    (34) Atrib -> ID . MINUSMINUS PONTeVIR
    (35) Atrib -> ID . LSQUARE Expr RSQUARE ASSIGN ExprR PONTeVIR

    ASSIGN          shift and go to state 43
    PLUSEQ          shift and go to state 44
    MINUSEQ         shift and go to state 45
    MULTEQ          shift and go to state 46
    DIVEQ           shift and go to state 47
    MODEQ           shift and go to state 48
    PLUSPLUS        shift and go to state 49
    MINUSMINUS      shift and go to state 50
    LSQUARE         shift and go to state 51


state 33

    (36) Function -> WRITE . LROUND PHRASE RROUND PONTeVIR
    (37) Function -> WRITE . LROUND ExprR RROUND PONTeVIR

    LROUND          shift and go to state 52


state 34

    (25) ifStatement -> IF . LROUND Condition RROUND THEN LCURLY LstInst RCURLY
    (26) ifStatement -> IF . LROUND Condition RROUND THEN LCURLY LstInst RCURLY ELSE LCURLY LstInst RCURLY

    LROUND          shift and go to state 53


state 35

    (23) Loop -> WHILE . LROUND Condition RROUND LCURLY LstInst RCURLY

    LROUND          shift and go to state 54


state 36

    (24) Loop -> FOR . LROUND Atrib Atrib Condition RROUND LCURLY LstInst RCURLY

    LROUND          shift and go to state 55


state 37

    (13) Fs -> FUNCTIONS DOLLAR LstFunct . DOLLAR
    (15) LstFunct -> LstFunct . Func
    (16) Func -> . DEF FUNC_NAME LCURLY LstInst RETURN ID PONTeVIR RCURLY

    DOLLAR          shift and go to state 56
    DEF             shift and go to state 39

    Func                           shift and go to state 57

state 38

    (14) LstFunct -> Func .

    DOLLAR          reduce using rule 14 (LstFunct -> Func .)
    DEF             reduce using rule 14 (LstFunct -> Func .)


state 39

    (16) Func -> DEF . FUNC_NAME LCURLY LstInst RETURN ID PONTeVIR RCURLY
